start work on java11 build support, remove some ridiculous guava usage
Signed-off-by: olivier lamy <olamy@apache.org>