@@ -20,7 +20,7 @@
     <changelist>-SNAPSHOT</changelist>
     <java.level>8</java.level>
     <mockito.version>1.10.19</mockito.version>
-    <powermock.version>1.6.3</powermock.version>
+    <powermock.version>1.7.4</powermock.version>
     <jira-rest-client.version>5.2.1</jira-rest-client.version>
     <fugue.version>3.0.0</fugue.version>
     <workflow.version>2.0</workflow.version>
@@ -54,6 +54,27 @@
             </configuration>
           </plugin>
         </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>java11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <reuseForks>false</reuseForks>
+                <!--          <argLine>&#45;&#45;add-modules java.xml.bind</argLine>-->
+                <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=warn</argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
       </build>
     </profile>
   </profiles>
@@ -171,7 +192,7 @@
            </configuration>
          </execution>
        </executions>
-     </plugin>
+      </plugin>
     </plugins>
   </build>
 
@@ -332,8 +353,8 @@
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
+      <artifactId>hamcrest-core</artifactId>
+      <version>2.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
